// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build add command adds a new build 1`] = `
Array [
  Object {
    "label": "First commit",
    "number": 1,
    "ref": "0000000",
    "url": "https://invalid/1",
  },
]
`;

exports[`build add command uses the build ID from the environment 1`] = `
Array [
  Object {
    "label": "First commit",
    "number": 12345,
    "ref": "0000000",
    "url": "https://invalid/1",
  },
]
`;
